week1/y.output
Grammar

    0 $accept: program $end

    1 program: extern extern function_def

    2 extern: EXTERN VOID PRINT '(' INT ')' ';'
    3       | EXTERN INT READ '(' ')' ';'

    4 function_def: INT ID '(' INT ID ')' statement
    5             | INT ID '(' ')' statement

    6 block: '{' declarations statements '}'

    7 statements: statements statement
    8           | statement

    9 statement: ID '=' expr ';'
   10          | expr ';'
   11          | PRINT expr ';'
   12          | IF '(' expr ')' statement
   13          | IF '(' expr ')' statement ELSE statement
   14          | WHILE '(' expr ')' block
   15          | RETURN '(' expr ')' ';'
   16          | block

   17 expr: term
   18     | '-' term
   19     | expr '+' expr
   20     | expr '-' expr
   21     | expr '*' expr
   22     | expr '/' expr
   23     | expr '<' expr
   24     | expr '>' expr
   25     | expr EQ expr
   26     | expr NE expr
   27     | expr LE expr
   28     | expr GE expr
   29     | '(' expr ')'
   30     | READ '(' ')'

   31 declarations: declarations declaration
   32             | %empty

   33 declaration: INT ID ';'

   34 term: ID
   35     | NUM


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 2 3 4 5 12 13 14 15 29 30
    ')' (41) 2 3 4 5 12 13 14 15 29 30
    '*' (42) 21
    '+' (43) 19
    '-' (45) 18 20
    '/' (47) 22
    ';' (59) 2 3 9 10 11 15 33
    '<' (60) 23
    '=' (61) 9
    '>' (62) 24
    '{' (123) 6
    '}' (125) 6
    error (256)
    NUM <iVal> (258) 35
    ID <sName> (259) 4 5 9 33 34
    WHILE (260) 14
    IF (261) 12 13
    EXTERN (262) 2 3
    VOID (263) 2
    INT (264) 2 3 4 5 33
    ELSE (265) 13
    READ (266) 3 30
    RETURN (267) 15
    PRINT (268) 2 11
    GE (269) 28
    LE (270) 27
    EQ (271) 25
    NE (272) 26
    UMINUS (273)
    IFX (274)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    program <nptr> (33)
        on left: 1
        on right: 0
    extern <nptr> (34)
        on left: 2 3
        on right: 1
    function_def <nptr> (35)
        on left: 4 5
        on right: 1
    block <nptr> (36)
        on left: 6
        on right: 14 16
    statements <stmt_list> (37)
        on left: 7 8
        on right: 6 7
    statement <nptr> (38)
        on left: 9 10 11 12 13 14 15 16
        on right: 4 5 7 8 12 13
    expr <nptr> (39)
        on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30
        on right: 9 10 11 12 13 14 15 19 20 21 22 23 24 25 26 27 28 29
    declarations <stmt_list> (40)
        on left: 31 32
        on right: 6 31
    declaration <nptr> (41)
        on left: 33
        on right: 31
    term <nptr> (42)
        on left: 34 35
        on right: 17 18


State 0

    0 $accept: . program $end

    EXTERN  shift, and go to state 1

    program  go to state 2
    extern   go to state 3


State 1

    2 extern: EXTERN . VOID PRINT '(' INT ')' ';'
    3       | EXTERN . INT READ '(' ')' ';'

    VOID  shift, and go to state 4
    INT   shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: extern . extern function_def

    EXTERN  shift, and go to state 1

    extern  go to state 7


State 4

    2 extern: EXTERN VOID . PRINT '(' INT ')' ';'

    PRINT  shift, and go to state 8


State 5

    3 extern: EXTERN INT . READ '(' ')' ';'

    READ  shift, and go to state 9


State 6

    0 $accept: program $end .

    $default  accept


State 7

    1 program: extern extern . function_def

    INT  shift, and go to state 10

    function_def  go to state 11


State 8

    2 extern: EXTERN VOID PRINT . '(' INT ')' ';'

    '('  shift, and go to state 12


State 9

    3 extern: EXTERN INT READ . '(' ')' ';'

    '('  shift, and go to state 13


State 10

    4 function_def: INT . ID '(' INT ID ')' statement
    5             | INT . ID '(' ')' statement

    ID  shift, and go to state 14


State 11

    1 program: extern extern function_def .

    $default  reduce using rule 1 (program)


State 12

    2 extern: EXTERN VOID PRINT '(' . INT ')' ';'

    INT  shift, and go to state 15


State 13

    3 extern: EXTERN INT READ '(' . ')' ';'

    ')'  shift, and go to state 16


State 14

    4 function_def: INT ID . '(' INT ID ')' statement
    5             | INT ID . '(' ')' statement

    '('  shift, and go to state 17


State 15

    2 extern: EXTERN VOID PRINT '(' INT . ')' ';'

    ')'  shift, and go to state 18


State 16

    3 extern: EXTERN INT READ '(' ')' . ';'

    ';'  shift, and go to state 19


State 17

    4 function_def: INT ID '(' . INT ID ')' statement
    5             | INT ID '(' . ')' statement

    INT  shift, and go to state 20
    ')'  shift, and go to state 21


State 18

    2 extern: EXTERN VOID PRINT '(' INT ')' . ';'

    ';'  shift, and go to state 22


State 19

    3 extern: EXTERN INT READ '(' ')' ';' .

    $default  reduce using rule 3 (extern)


State 20

    4 function_def: INT ID '(' INT . ID ')' statement

    ID  shift, and go to state 23


State 21

    5 function_def: INT ID '(' ')' . statement

    NUM     shift, and go to state 24
    ID      shift, and go to state 25
    WHILE   shift, and go to state 26
    IF      shift, and go to state 27
    READ    shift, and go to state 28
    RETURN  shift, and go to state 29
    PRINT   shift, and go to state 30
    '-'     shift, and go to state 31
    '('     shift, and go to state 32
    '{'     shift, and go to state 33

    block      go to state 34
    statement  go to state 35
    expr       go to state 36
    term       go to state 37


State 22

    2 extern: EXTERN VOID PRINT '(' INT ')' ';' .

    $default  reduce using rule 2 (extern)


State 23

    4 function_def: INT ID '(' INT ID . ')' statement

    ')'  shift, and go to state 38


State 24

   35 term: NUM .

    $default  reduce using rule 35 (term)


State 25

    9 statement: ID . '=' expr ';'
   34 term: ID .

    '='  shift, and go to state 39

    $default  reduce using rule 34 (term)


State 26

   14 statement: WHILE . '(' expr ')' block

    '('  shift, and go to state 40


State 27

   12 statement: IF . '(' expr ')' statement
   13          | IF . '(' expr ')' statement ELSE statement

    '('  shift, and go to state 41


State 28

   30 expr: READ . '(' ')'

    '('  shift, and go to state 42


State 29

   15 statement: RETURN . '(' expr ')' ';'

    '('  shift, and go to state 43


State 30

   11 statement: PRINT . expr ';'

    NUM   shift, and go to state 24
    ID    shift, and go to state 44
    READ  shift, and go to state 28
    '-'   shift, and go to state 31
    '('   shift, and go to state 32

    expr  go to state 45
    term  go to state 37


State 31

   18 expr: '-' . term

    NUM  shift, and go to state 24
    ID   shift, and go to state 44

    term  go to state 46


State 32

   29 expr: '(' . expr ')'

    NUM   shift, and go to state 24
    ID    shift, and go to state 44
    READ  shift, and go to state 28
    '-'   shift, and go to state 31
    '('   shift, and go to state 32

    expr  go to state 47
    term  go to state 37


State 33

    6 block: '{' . declarations statements '}'

    $default  reduce using rule 32 (declarations)

    declarations  go to state 48


State 34

   16 statement: block .

    $default  reduce using rule 16 (statement)


State 35

    5 function_def: INT ID '(' ')' statement .

    $default  reduce using rule 5 (function_def)


State 36

   10 statement: expr . ';'
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . EQ expr
   26     | expr . NE expr
   27     | expr . LE expr
   28     | expr . GE expr

    GE   shift, and go to state 49
    LE   shift, and go to state 50
    EQ   shift, and go to state 51
    NE   shift, and go to state 52
    '>'  shift, and go to state 53
    '<'  shift, and go to state 54
    '+'  shift, and go to state 55
    '-'  shift, and go to state 56
    '*'  shift, and go to state 57
    '/'  shift, and go to state 58
    ';'  shift, and go to state 59


State 37

   17 expr: term .

    $default  reduce using rule 17 (expr)


State 38

    4 function_def: INT ID '(' INT ID ')' . statement

    NUM     shift, and go to state 24
    ID      shift, and go to state 25
    WHILE   shift, and go to state 26
    IF      shift, and go to state 27
    READ    shift, and go to state 28
    RETURN  shift, and go to state 29
    PRINT   shift, and go to state 30
    '-'     shift, and go to state 31
    '('     shift, and go to state 32
    '{'     shift, and go to state 33

    block      go to state 34
    statement  go to state 60
    expr       go to state 36
    term       go to state 37


State 39

    9 statement: ID '=' . expr ';'

    NUM   shift, and go to state 24
    ID    shift, and go to state 44
    READ  shift, and go to state 28
    '-'   shift, and go to state 31
    '('   shift, and go to state 32

    expr  go to state 61
    term  go to state 37


State 40

   14 statement: WHILE '(' . expr ')' block

    NUM   shift, and go to state 24
    ID    shift, and go to state 44
    READ  shift, and go to state 28
    '-'   shift, and go to state 31
    '('   shift, and go to state 32

    expr  go to state 62
    term  go to state 37


State 41

   12 statement: IF '(' . expr ')' statement
   13          | IF '(' . expr ')' statement ELSE statement

    NUM   shift, and go to state 24
    ID    shift, and go to state 44
    READ  shift, and go to state 28
    '-'   shift, and go to state 31
    '('   shift, and go to state 32

    expr  go to state 63
    term  go to state 37


State 42

   30 expr: READ '(' . ')'

    ')'  shift, and go to state 64


State 43

   15 statement: RETURN '(' . expr ')' ';'

    NUM   shift, and go to state 24
    ID    shift, and go to state 44
    READ  shift, and go to state 28
    '-'   shift, and go to state 31
    '('   shift, and go to state 32

    expr  go to state 65
    term  go to state 37


State 44

   34 term: ID .

    $default  reduce using rule 34 (term)


State 45

   11 statement: PRINT expr . ';'
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . EQ expr
   26     | expr . NE expr
   27     | expr . LE expr
   28     | expr . GE expr

    GE   shift, and go to state 49
    LE   shift, and go to state 50
    EQ   shift, and go to state 51
    NE   shift, and go to state 52
    '>'  shift, and go to state 53
    '<'  shift, and go to state 54
    '+'  shift, and go to state 55
    '-'  shift, and go to state 56
    '*'  shift, and go to state 57
    '/'  shift, and go to state 58
    ';'  shift, and go to state 66


State 46

   18 expr: '-' term .

    $default  reduce using rule 18 (expr)


State 47

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . EQ expr
   26     | expr . NE expr
   27     | expr . LE expr
   28     | expr . GE expr
   29     | '(' expr . ')'

    GE   shift, and go to state 49
    LE   shift, and go to state 50
    EQ   shift, and go to state 51
    NE   shift, and go to state 52
    '>'  shift, and go to state 53
    '<'  shift, and go to state 54
    '+'  shift, and go to state 55
    '-'  shift, and go to state 56
    '*'  shift, and go to state 57
    '/'  shift, and go to state 58
    ')'  shift, and go to state 67


State 48

    6 block: '{' declarations . statements '}'
   31 declarations: declarations . declaration

    NUM     shift, and go to state 24
    ID      shift, and go to state 25
    WHILE   shift, and go to state 26
    IF      shift, and go to state 27
    INT     shift, and go to state 68
    READ    shift, and go to state 28
    RETURN  shift, and go to state 29
    PRINT   shift, and go to state 30
    '-'     shift, and go to state 31
    '('     shift, and go to state 32
    '{'     shift, and go to state 33

    block        go to state 34
    statements   go to state 69
    statement    go to state 70
    expr         go to state 36
    declaration  go to state 71
    term         go to state 37


State 49

   28 expr: expr GE . expr

    NUM   shift, and go to state 24
    ID    shift, and go to state 44
    READ  shift, and go to state 28
    '-'   shift, and go to state 31
    '('   shift, and go to state 32

    expr  go to state 72
    term  go to state 37


State 50

   27 expr: expr LE . expr

    NUM   shift, and go to state 24
    ID    shift, and go to state 44
    READ  shift, and go to state 28
    '-'   shift, and go to state 31
    '('   shift, and go to state 32

    expr  go to state 73
    term  go to state 37


State 51

   25 expr: expr EQ . expr

    NUM   shift, and go to state 24
    ID    shift, and go to state 44
    READ  shift, and go to state 28
    '-'   shift, and go to state 31
    '('   shift, and go to state 32

    expr  go to state 74
    term  go to state 37


State 52

   26 expr: expr NE . expr

    NUM   shift, and go to state 24
    ID    shift, and go to state 44
    READ  shift, and go to state 28
    '-'   shift, and go to state 31
    '('   shift, and go to state 32

    expr  go to state 75
    term  go to state 37


State 53

   24 expr: expr '>' . expr

    NUM   shift, and go to state 24
    ID    shift, and go to state 44
    READ  shift, and go to state 28
    '-'   shift, and go to state 31
    '('   shift, and go to state 32

    expr  go to state 76
    term  go to state 37


State 54

   23 expr: expr '<' . expr

    NUM   shift, and go to state 24
    ID    shift, and go to state 44
    READ  shift, and go to state 28
    '-'   shift, and go to state 31
    '('   shift, and go to state 32

    expr  go to state 77
    term  go to state 37


State 55

   19 expr: expr '+' . expr

    NUM   shift, and go to state 24
    ID    shift, and go to state 44
    READ  shift, and go to state 28
    '-'   shift, and go to state 31
    '('   shift, and go to state 32

    expr  go to state 78
    term  go to state 37


State 56

   20 expr: expr '-' . expr

    NUM   shift, and go to state 24
    ID    shift, and go to state 44
    READ  shift, and go to state 28
    '-'   shift, and go to state 31
    '('   shift, and go to state 32

    expr  go to state 79
    term  go to state 37


State 57

   21 expr: expr '*' . expr

    NUM   shift, and go to state 24
    ID    shift, and go to state 44
    READ  shift, and go to state 28
    '-'   shift, and go to state 31
    '('   shift, and go to state 32

    expr  go to state 80
    term  go to state 37


State 58

   22 expr: expr '/' . expr

    NUM   shift, and go to state 24
    ID    shift, and go to state 44
    READ  shift, and go to state 28
    '-'   shift, and go to state 31
    '('   shift, and go to state 32

    expr  go to state 81
    term  go to state 37


State 59

   10 statement: expr ';' .

    $default  reduce using rule 10 (statement)


State 60

    4 function_def: INT ID '(' INT ID ')' statement .

    $default  reduce using rule 4 (function_def)


State 61

    9 statement: ID '=' expr . ';'
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . EQ expr
   26     | expr . NE expr
   27     | expr . LE expr
   28     | expr . GE expr

    GE   shift, and go to state 49
    LE   shift, and go to state 50
    EQ   shift, and go to state 51
    NE   shift, and go to state 52
    '>'  shift, and go to state 53
    '<'  shift, and go to state 54
    '+'  shift, and go to state 55
    '-'  shift, and go to state 56
    '*'  shift, and go to state 57
    '/'  shift, and go to state 58
    ';'  shift, and go to state 82


State 62

   14 statement: WHILE '(' expr . ')' block
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . EQ expr
   26     | expr . NE expr
   27     | expr . LE expr
   28     | expr . GE expr

    GE   shift, and go to state 49
    LE   shift, and go to state 50
    EQ   shift, and go to state 51
    NE   shift, and go to state 52
    '>'  shift, and go to state 53
    '<'  shift, and go to state 54
    '+'  shift, and go to state 55
    '-'  shift, and go to state 56
    '*'  shift, and go to state 57
    '/'  shift, and go to state 58
    ')'  shift, and go to state 83


State 63

   12 statement: IF '(' expr . ')' statement
   13          | IF '(' expr . ')' statement ELSE statement
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . EQ expr
   26     | expr . NE expr
   27     | expr . LE expr
   28     | expr . GE expr

    GE   shift, and go to state 49
    LE   shift, and go to state 50
    EQ   shift, and go to state 51
    NE   shift, and go to state 52
    '>'  shift, and go to state 53
    '<'  shift, and go to state 54
    '+'  shift, and go to state 55
    '-'  shift, and go to state 56
    '*'  shift, and go to state 57
    '/'  shift, and go to state 58
    ')'  shift, and go to state 84


State 64

   30 expr: READ '(' ')' .

    $default  reduce using rule 30 (expr)


State 65

   15 statement: RETURN '(' expr . ')' ';'
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . EQ expr
   26     | expr . NE expr
   27     | expr . LE expr
   28     | expr . GE expr

    GE   shift, and go to state 49
    LE   shift, and go to state 50
    EQ   shift, and go to state 51
    NE   shift, and go to state 52
    '>'  shift, and go to state 53
    '<'  shift, and go to state 54
    '+'  shift, and go to state 55
    '-'  shift, and go to state 56
    '*'  shift, and go to state 57
    '/'  shift, and go to state 58
    ')'  shift, and go to state 85


State 66

   11 statement: PRINT expr ';' .

    $default  reduce using rule 11 (statement)


State 67

   29 expr: '(' expr ')' .

    $default  reduce using rule 29 (expr)


State 68

   33 declaration: INT . ID ';'

    ID  shift, and go to state 86


State 69

    6 block: '{' declarations statements . '}'
    7 statements: statements . statement

    NUM     shift, and go to state 24
    ID      shift, and go to state 25
    WHILE   shift, and go to state 26
    IF      shift, and go to state 27
    READ    shift, and go to state 28
    RETURN  shift, and go to state 29
    PRINT   shift, and go to state 30
    '-'     shift, and go to state 31
    '('     shift, and go to state 32
    '{'     shift, and go to state 33
    '}'     shift, and go to state 87

    block      go to state 34
    statement  go to state 88
    expr       go to state 36
    term       go to state 37


State 70

    8 statements: statement .

    $default  reduce using rule 8 (statements)


State 71

   31 declarations: declarations declaration .

    $default  reduce using rule 31 (declarations)


State 72

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . EQ expr
   26     | expr . NE expr
   27     | expr . LE expr
   28     | expr . GE expr
   28     | expr GE expr .

    '+'  shift, and go to state 55
    '-'  shift, and go to state 56
    '*'  shift, and go to state 57
    '/'  shift, and go to state 58

    $default  reduce using rule 28 (expr)


State 73

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . EQ expr
   26     | expr . NE expr
   27     | expr . LE expr
   27     | expr LE expr .
   28     | expr . GE expr

    '+'  shift, and go to state 55
    '-'  shift, and go to state 56
    '*'  shift, and go to state 57
    '/'  shift, and go to state 58

    $default  reduce using rule 27 (expr)


State 74

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . EQ expr
   25     | expr EQ expr .
   26     | expr . NE expr
   27     | expr . LE expr
   28     | expr . GE expr

    '+'  shift, and go to state 55
    '-'  shift, and go to state 56
    '*'  shift, and go to state 57
    '/'  shift, and go to state 58

    $default  reduce using rule 25 (expr)


State 75

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . EQ expr
   26     | expr . NE expr
   26     | expr NE expr .
   27     | expr . LE expr
   28     | expr . GE expr

    '+'  shift, and go to state 55
    '-'  shift, and go to state 56
    '*'  shift, and go to state 57
    '/'  shift, and go to state 58

    $default  reduce using rule 26 (expr)


State 76

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   24     | expr '>' expr .
   25     | expr . EQ expr
   26     | expr . NE expr
   27     | expr . LE expr
   28     | expr . GE expr

    '+'  shift, and go to state 55
    '-'  shift, and go to state 56
    '*'  shift, and go to state 57
    '/'  shift, and go to state 58

    $default  reduce using rule 24 (expr)


State 77

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '<' expr
   23     | expr '<' expr .
   24     | expr . '>' expr
   25     | expr . EQ expr
   26     | expr . NE expr
   27     | expr . LE expr
   28     | expr . GE expr

    '+'  shift, and go to state 55
    '-'  shift, and go to state 56
    '*'  shift, and go to state 57
    '/'  shift, and go to state 58

    $default  reduce using rule 23 (expr)


State 78

   19 expr: expr . '+' expr
   19     | expr '+' expr .
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . EQ expr
   26     | expr . NE expr
   27     | expr . LE expr
   28     | expr . GE expr

    '*'  shift, and go to state 57
    '/'  shift, and go to state 58

    $default  reduce using rule 19 (expr)


State 79

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   20     | expr '-' expr .
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . EQ expr
   26     | expr . NE expr
   27     | expr . LE expr
   28     | expr . GE expr

    '*'  shift, and go to state 57
    '/'  shift, and go to state 58

    $default  reduce using rule 20 (expr)


State 80

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   21     | expr '*' expr .
   22     | expr . '/' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . EQ expr
   26     | expr . NE expr
   27     | expr . LE expr
   28     | expr . GE expr

    $default  reduce using rule 21 (expr)


State 81

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   22     | expr '/' expr .
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . EQ expr
   26     | expr . NE expr
   27     | expr . LE expr
   28     | expr . GE expr

    $default  reduce using rule 22 (expr)


State 82

    9 statement: ID '=' expr ';' .

    $default  reduce using rule 9 (statement)


State 83

   14 statement: WHILE '(' expr ')' . block

    '{'  shift, and go to state 33

    block  go to state 89


State 84

   12 statement: IF '(' expr ')' . statement
   13          | IF '(' expr ')' . statement ELSE statement

    NUM     shift, and go to state 24
    ID      shift, and go to state 25
    WHILE   shift, and go to state 26
    IF      shift, and go to state 27
    READ    shift, and go to state 28
    RETURN  shift, and go to state 29
    PRINT   shift, and go to state 30
    '-'     shift, and go to state 31
    '('     shift, and go to state 32
    '{'     shift, and go to state 33

    block      go to state 34
    statement  go to state 90
    expr       go to state 36
    term       go to state 37


State 85

   15 statement: RETURN '(' expr ')' . ';'

    ';'  shift, and go to state 91


State 86

   33 declaration: INT ID . ';'

    ';'  shift, and go to state 92


State 87

    6 block: '{' declarations statements '}' .

    $default  reduce using rule 6 (block)


State 88

    7 statements: statements statement .

    $default  reduce using rule 7 (statements)


State 89

   14 statement: WHILE '(' expr ')' block .

    $default  reduce using rule 14 (statement)


State 90

   12 statement: IF '(' expr ')' statement .
   13          | IF '(' expr ')' statement . ELSE statement

    ELSE  shift, and go to state 93

    $default  reduce using rule 12 (statement)


State 91

   15 statement: RETURN '(' expr ')' ';' .

    $default  reduce using rule 15 (statement)


State 92

   33 declaration: INT ID ';' .

    $default  reduce using rule 33 (declaration)


State 93

   13 statement: IF '(' expr ')' statement ELSE . statement

    NUM     shift, and go to state 24
    ID      shift, and go to state 25
    WHILE   shift, and go to state 26
    IF      shift, and go to state 27
    READ    shift, and go to state 28
    RETURN  shift, and go to state 29
    PRINT   shift, and go to state 30
    '-'     shift, and go to state 31
    '('     shift, and go to state 32
    '{'     shift, and go to state 33

    block      go to state 34
    statement  go to state 94
    expr       go to state 36
    term       go to state 37


State 94

   13 statement: IF '(' expr ')' statement ELSE statement .

    $default  reduce using rule 13 (statement)
